--- a/css/styles.css
+++ b/css/styles.css
@@ -33,12 +33,14 @@ li {
 
 .nav-li {
   color: #2e2f42;
-  cursor: pointer;
   font-weight: 500;
 }
 
-.nav-li:hover,
-.nav-li:focus {
+.nav-li:hover {
+  color: #404bbf;
+}
+
+.nav-link:focus {
   color: #404bbf;
 }
 
@@ -55,7 +57,10 @@ li {
   color: #434455;
 }
 
-.address-li:hover,
+.address-li:hover {
+  color: #404bbf;
+}
+
 .address-li:focus {
   color: #404bbf;
 }
@@ -68,25 +73,37 @@ li {
   color: #fff;
   font-size: 56px;
   line-height: 1.07;
+  letter-spacing: 0.2;
   text-align: center;
 }
 
 .button-order {
+  font-family: 'Roboto', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
   border-style: none;
   color: #fff;
   background: #4d5ae5;
+  cursor: pointer;
 }
 
 .button-order:hover {
   background-color: #404bbf;
 }
 
-h2 {
+.button-order:focus {
+  background-color: #404bbf;
+}
+
+.section-title {
   color: #2e2f42;
   font-weight: 700;
   font-size: 36px;
   line-height: 1.11;
   text-align: center;
+  text-transform: capitalize;
 }
 
 h3 {
@@ -96,7 +113,7 @@ h3 {
   line-height: 1.2;
 }
 
-p {
+.text-main {
   color: #434455;
 }
 
