--- a/css/styles.css
+++ b/css/styles.css
@@ -73,7 +73,7 @@ li {
   color: #fff;
   font-size: 56px;
   line-height: 1.07;
-  letter-spacing: 0.2;
+  letter-spacing: 0.02em;
   text-align: center;
 }
 
@@ -128,11 +128,11 @@ li {
   text-align: center;
 }
 
-footer {
+.footer {
   background-color: #2e2f42;
 }
 
-.logotipe-footer {
+.logotipe-unic-footer {
   color: #f4f4fd;
 }
 
